[gd_scene load_steps=4 format=3 uid="uid://cjae5m785ar3u"]

[ext_resource type="Theme" uid="uid://baugxgjplv2xj" path="res://pixle.tres" id="1_4iq2k"]
[ext_resource type="Script" path="res://hud.gd" id="1_7xgsa"]
[ext_resource type="Texture2D" uid="uid://d387b8swijc51" path="res://assets/brick break frame.aseprite" id="1_qpjk3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -270.0
offset_bottom = -370.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4iq2k")
script = ExtResource("1_7xgsa")

[node name="Frame" type="Sprite2D" parent="."]
texture = ExtResource("1_qpjk3")
centered = false

[node name="LeftContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 77.0
theme = ExtResource("1_4iq2k")

[node name="Label" type="Label" parent="LeftContainer"]
layout_mode = 2
theme = ExtResource("1_4iq2k")
text = "TODO
"

[node name="RightContainer" type="VSplitContainer" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 7.0
offset_right = 263.0
offset_bottom = 75.0
theme = ExtResource("1_4iq2k")

[node name="LevelLabel" type="Label" parent="RightContainer"]
layout_mode = 2
theme = ExtResource("1_4iq2k")
text = "LVL"
horizontal_alignment = 1

[node name="LevelNum" type="Label" parent="RightContainer"]
layout_mode = 2
theme = ExtResource("1_4iq2k")
text = "#
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="VSplitContainer" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 7.0
offset_right = 188.0
offset_bottom = 75.0
theme = ExtResource("1_4iq2k")
dragger_visibility = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_4iq2k")
text = "score"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LivesLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_4iq2k")
text = "Lives
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
